@@ -1,6 +1,7 @@
 package com.yourname.plantgame.helperclass;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class Random2DArray<T>{
@@ -9,13 +10,11 @@ public class Random2DArray<T>{
     ArrayList<T> arrayList=new ArrayList<>();
     public Random2DArray(T[][] array2D){
         this.array2D=array2D;
-        /*
-        this.array2D=array2D.clone();
+        //this.array2D=array2D.clone();
         for(int r=0;r<array2D.length;r++){
             this.array2D[r]=array2D[r].clone();
             totalLength+=array2D[r].length;
         }
-         */
     }
     private static int randomInt(int a,int b){//[a,b)
         return (int) ((b-a)*Math.random())+a;
@@ -34,7 +33,7 @@ public class Random2DArray<T>{
     public T eliminateRandom(){
         if(arrayList.isEmpty()){
             for(int i=0;i<array2D.length;i++){
-                arrayList.addAll(List.of(array2D[i]));
+                arrayList.addAll(Arrays.asList(array2D[i]));
             }
         }
         return arrayList.remove(randomInt(0,arrayList.size()));
